--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/CredentialManagementPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/CredentialManagementPage.fxml
@@ -22,14 +22,13 @@
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints fillHeight="false" percentHeight="10.0" valignment="CENTER" vgrow="NEVER" />
-                <RowConstraints fillHeight="false" percentHeight="10.0" vgrow="NEVER" />
             <RowConstraints fillHeight="false" minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                <RowConstraints fillHeight="false" percentHeight="10.0" valignment="CENTER" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" minHeight="10.0" percentHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER" />
                 <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" percentHeight="70.0" valignment="CENTER" vgrow="ALWAYS" />
             </rowConstraints>
             <children>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Credential Management" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                <TextField fx:id="searchTextBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" promptText="Search..." styleClass="text-box" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                <TextField fx:id="searchTextBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="552.0" promptText="Search Username" styleClass="text-box" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                     <font>
                         <Font size="16.0" />
                     </font>
@@ -40,12 +39,27 @@
                         <Insets left="10.0" />
                     </padding>
                 </TextField>
-                <JFXListView fx:id="resultView" stylesheets="@../../css/mainStyle.css" GridPane.columnSpan="2" GridPane.rowIndex="4">
+                <JFXListView fx:id="resultView" stylesheets="@../../css/mainStyle.css" GridPane.columnSpan="2" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" />
                     </GridPane.margin></JFXListView>
-                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Search" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="357.0" text="Update DB" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="357.0" text="Add Credential" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </Button>
+            <TextField fx:id="searchTextBox1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="552.0" promptText="Search Password" styleClass="text-box" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets left="20.0" right="20.0" />
+               </GridPane.margin>
+            </TextField>
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="357.0" text="Remove Credential" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
