--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/CredentialManagementPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/CredentialManagementPage.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane styleClass="anchor-pane" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.CredentialManagementPageController">
     <children>
-        <GridPane alignment="CENTER" layoutY="7.0" prefHeight="580.0" prefWidth="800.0" styleClass="grid-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <GridPane alignment="CENTER" layoutY="7.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="580.0" prefWidth="800.0" styleClass="grid-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="485.9999694824219" minWidth="10.0" prefWidth="485.9999694824219" />
@@ -27,10 +27,13 @@
                 <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" percentHeight="70.0" valignment="CENTER" vgrow="ALWAYS" />
             </rowConstraints>
             <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Credential Management" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
-                <TextField fx:id="usernameBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="552.0" promptText="Enter username..." styleClass="text-box" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Credential Management" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font size="48.0" />
+               </font></Text>
+                <TextField fx:id="usernameBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="53.0" prefWidth="610.0" promptText="Enter username..." styleClass="text-box" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
                     <font>
-                        <Font size="16.0" />
+                        <Font size="26.0" />
                     </font>
                     <GridPane.margin>
                         <Insets left="20.0" right="20.0" />
@@ -43,19 +46,25 @@
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" />
                     </GridPane.margin></JFXListView>
-            <JFXButton fx:id="addCredential" onAction="#addCredentialButtonClick" prefHeight="26.0" prefWidth="264.0" text="Add Credential" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1">
+            <JFXButton fx:id="addCredential" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#addCredentialButtonClick" prefHeight="53.0" prefWidth="264.0" text="Add Credential" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
-            </JFXButton>
-            <JFXButton fx:id="removeCredential" onAction="#removeCredentialButtonClick" prefHeight="26.0" prefWidth="264.0" text="Remove Credential" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </JFXButton>
-            <TextField fx:id="passwordBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="552.0" promptText="Enter password..." styleClass="text-box" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                <font>
-                  <Font size="16.0" />
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="removeCredential" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#removeCredentialButtonClick" prefHeight="53.0" prefWidth="264.0" text="Remove Credential" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <TextField fx:id="passwordBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="53.0" prefWidth="610.0" promptText="Enter password..." styleClass="text-box" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font size="26.0" />
                </font>
                <padding>
                   <Insets left="10.0" />
