--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/css/mainStyle.css
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/css/mainStyle.css
@@ -7,19 +7,18 @@
 
 * {
   -fx-text-box-background-color: #ffffff;
-  -fx-button-background-color: #ffffff;
-  -fx-pane-background-color: #ffffff;
 
   -fx-text-box-text-color: #ffffff;
-  -fx-button-text-color: black;
+  -fx-button-text-color: #ffffff;
   -fx-header-color: #ffffff;
   -fx-text-color: #e0eef4;
 
-  -fx-text-fill-color: #b8b8b8;
+  -fx-text-fill-color: #ffffff;
 
-  -fx-highlight-color: #5579c5;
-  -fx-secondary-color: #90b4ce;
-  -fx-tertiary-color: #ef4565;
+  -fx-highlight-color: #127334;
+  -fx-secondary-color: #1DB954;
+  -fx-primary-color: #191414;
+  -fx-accent-color: #797979;
 }
 
 /* UI Specific Elements */
@@ -45,34 +44,41 @@
 }
 
 .button {
-  -fx-background-color: -fx-button-background-color;
+  -fx-background-color: -fx-secondary-color;
   -fx-background-radius: 5;
 }
 
 .jfx-combo-box .list-cell {
-  -fx-background-color: -fx-button-background-color;
+  -fx-background-color: -fx-secondary-color;
   -fx-text-fill: -fx-button-text-color;
 }
 
 .jfx-combo-box {
-  -fx-prompt-text-fill: #b8b8b8;
-  -fx-background-color: -fx-button-background-color;
+  -fx-prompt-text-fill: #ffffff;
+  -fx-background-color: -fx-accent-color;
   -fx-text-fill: -fx-button-text-color;
   -fx-background-radius: 10;
 }
 
 .text-box {
-  -fx-background-color: -fx-text-box-background-color;
+  -fx-background-color: -fx-accent-color;
+  -fx-text-fill: -fx-text-fill-color;
+}
+
+.text-field {
+  -fx-background-color: -fx-accent-color;
   -fx-text-fill: -fx-text-fill-color;
 }
 
 .text-area {
-  -fx-background-color: transparent, transparent, transparent, transparent;
+  -fx-background-color: -fx-accent-color;
+  -fx-text-fill: -fx-text-fill-color;
 }
 
 .text-area .content {
-  -fx-background-color: -fx-text-box-background-color;
+  -fx-background-color: -fx-accent-color;
   -fx-background-radius: 5 5 5 5;
+  -fx-text-fill: -fx-text-fill-color;
 }
 
 .text-area .scroll-pane .viewport {
@@ -96,25 +102,17 @@
 /* Panes and Backgrounds */
 .tab-pane,
 .anchor-pane {
-  -fx-background-color: -fx-pane-background-color;
+  -fx-background-color: black;
 }
 
 .grid-pane {
-  -fx-background-color: linear-gradient(
-    from 25% 25% to 100% 100%,
-    #7579ff,
-    #b224ef
-  );
+  -fx-background-color: -fx-primary-color;
   -fx-background-radius: 20px;
 }
 
 /* Tab View */
 .tab {
-  -fx-background-color: linear-gradient(
-    from 25% 25% to 100% 100%,
-    #7579ff,
-    #b224ef
-  );
+  -fx-background-color: -fx-secondary-color;
   -fx-background-radius: 5px;
 }
 
