--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/DeceasedBodyRemovalServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/DeceasedBodyRemovalServiceRequestPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -109,14 +110,14 @@
                 </GridPane.margin>
             </JFXComboBox>
             <Text fill="#e1a9a9" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
+                <GridPane.margin>
+                    <Insets right="10.0" />
+                </GridPane.margin>
             </Text>
             <AutoCompleteTextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
+                </GridPane.margin>
             </AutoCompleteTextField>
         </children>
     </GridPane>
