--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/MentalHealthServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/MentalHealthServiceRequestPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -115,7 +116,7 @@
             </Text>
             <AutoCompleteTextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="4">
                 <GridPane.margin>
-                    <Insets left="10.0" right="10.0" />
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
                 </GridPane.margin>
             </AutoCompleteTextField>
         </children>
