Fixed FaceId Master Merge

--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/LoginPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/LoginPage.fxml
@@ -18,19 +18,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane styleClass="anchor-pane" stylesheets="@../css/loginStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.LoginPageController">
-    <children>
-        <GridPane fx:id="mainGridPane" layoutY="7.0" prefHeight="800.0" prefWidth="1000.0" style="-fx-opacity: 75%;" styleClass="title-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <columnConstraints>
-                <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="250.0" />
-                <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints fillHeight="false" maxHeight="129.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="652.0" minHeight="10.0" prefHeight="652.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="76.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-            </rowConstraints>
+<AnchorPane styleClass="anchor-pane" stylesheets="@../css/loginStyle.css"
+   xmlns="http://javafx.com/javafx/17"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.LoginPageController">
+   <children>
+      <GridPane fx:id="mainGridPane" layoutY="7.0" prefHeight="800.0" prefWidth="1000.0" styleClass="title-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <columnConstraints>
+            <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="250.0" />
+            <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints fillHeight="false" maxHeight="129.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="652.0" minHeight="10.0" prefHeight="652.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="76.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <VBox fx:id="errorMessageVbox" alignment="TOP_CENTER" minWidth="-Infinity" opacity="0.85" prefWidth="500.0" styleClass="tab" stylesheets="@../css/mainStyle.css" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="NEVER">
                <children>
@@ -104,8 +106,8 @@
                   </StackPane>
                   <StackPane fx:id="usernameStackPane2">
                      <children>
-                        <Line endX="100.0" opacity="0.25" startX="-220.0" stroke="WHITE" strokeWidth="3.0" />
-                        <Line fx:id="usernameFillLine" endX="100.0" scaleX="0.0" startX="-220.0" stroke="WHITE" strokeWidth="3.0" />
+                        <Line fx:id="usernameBackgroundLine" endX="100.0" opacity="0.25" startX="-220.0" strokeWidth="3.0" />
+                        <Line fx:id="usernameFillLine" endX="100.0" scaleX="0.0" startX="-220.0" strokeWidth="3.0" />
                      </children>
                   </StackPane>
                   <StackPane fx:id="passwordStackPane" alignment="CENTER_LEFT" onMouseClicked="#passwordTextSelected" onMouseEntered="#passwordMouseEnter" onMouseExited="#passwordMouseExit">
@@ -127,12 +129,12 @@
                            </StackPane.margin>
                         </ImageView>
                         <PasswordField fx:id="passwordTextInput" onAction="#passwordAction" onKeyTyped="#updatePasswordText" opacity="0.0" prefHeight="30.0">
-                        <font>
-                           <Font size="18.0" />
-                        </font>
-                        <StackPane.margin>
-                           <Insets />
-                        </StackPane.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <StackPane.margin>
+                              <Insets />
+                           </StackPane.margin>
                         </PasswordField>
                      </children>
                      <opaqueInsets>
@@ -144,11 +146,11 @@
                   </StackPane>
                   <StackPane fx:id="passwordStackPane2">
                      <children>
-                        <Line endX="100.0" opacity="0.25" startX="-220.0" stroke="WHITE" strokeWidth="3.0" />
-                        <Line fx:id="passwordFillLine" endX="100.0" scaleX="0.0" startX="-220.0" stroke="WHITE" strokeWidth="3.0" />
+                        <Line fx:id="passwordBackgroundLine" endX="100.0" opacity="0.25" startX="-220.0" strokeWidth="3.0" />
+                        <Line fx:id="passwordFillLine" endX="100.0" scaleX="0.0" startX="-220.0" strokeWidth="3.0" />
                      </children>
                   </StackPane>
-                  <JFXButton fx:id="loginButton" buttonType="RAISED" disable="true" onAction="#loginButtonPressed" prefHeight="40.0" prefWidth="100.0" ripplerFill="WHITE" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20;" text="Login" textAlignment="CENTER">
+                  <JFXButton fx:id="loginButton" buttonType="RAISED" disable="true" onAction="#loginButtonPressed" prefHeight="40.0" prefWidth="100.0" ripplerFill="WHITE" text="Login" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets top="60.0" />
                      </VBox.margin>
@@ -224,6 +226,6 @@
                </GridPane.margin>
             </ImageView>
          </children>
-        </GridPane>
-    </children>
+      </GridPane>
+   </children>
 </AnchorPane>
