--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/css/schemes/spotifyLogin.css
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/css/schemes/spotifyLogin.css
@@ -8,14 +8,9 @@
 
 /* UI Specific Elements */
 .title-background {
-  -fx-background-image: url("../images/hospitalBackgroundImageSepia.png");
+  -fx-background-image: url("../images/hospitalBackgroundImage.png");
   -fx-background-position: top left;
   -fx-background-repeat: no-repeat;
+  -fx-background-color: #191414FF;
   -fx-background-size: cover;
-}
-
-.button {
-  -fx-background-color: #1DB954;
-  -fx-background-radius: 20;
-  -fx-text-fill: white;
 }
