--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/AudioVisualServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/AudioVisualServiceRequestPage.fxml
@@ -81,27 +81,27 @@
                <Font size="32.0" />
             </font>
          </Label>
-         <Label fx:id="requestDateT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="* Request Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+         <Label fx:id="requestDateT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="Request Date: *" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin>
          </Label>
-         <Label fx:id="locationT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="* Location:" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+         <Label fx:id="locationT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="Location: *" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin>
          </Label>
-         <Label fx:id="assigneeT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="* Assignee:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+         <Label fx:id="assigneeT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="Assignee: *" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin>
          </Label>
-         <Label fx:id="priorityT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="* Priority:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+         <Label fx:id="priorityT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="Priority: *" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin>
          </Label>
-         <Label fx:id="statusT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="* Status:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+         <Label fx:id="statusT" alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="111.0" text="Status: *" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin>
