--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FoodDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FoodDeliveryServiceRequestPage.fxml
@@ -84,22 +84,22 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Label fx:id="requestDateT" text="* Request Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Label fx:id="requestDateT" text="Request Date: *" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="assigneeT" text="* Assignee:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Label fx:id="assigneeT" text="Assignee: *" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="locationT" text="* Location:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Label fx:id="locationT" text="Location: *" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="patientNameT" text="* Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+            <Label fx:id="patientNameT" text="Patient Name: *" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
@@ -109,12 +109,12 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="priorityT" text="* Priority: " GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+            <Label fx:id="priorityT" text="Priority: * " GridPane.halignment="RIGHT" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="statusT" text="* Status:" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+            <Label fx:id="statusT" text="Status: *" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
