--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/MedicalEquipmentDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/MedicalEquipmentDeliveryServiceRequestPage.fxml
@@ -15,6 +15,7 @@
 <?import edu.wpi.teame.view.controllers.AutoCompleteTextField?>
 
 <AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#updateFromDB" prefHeight="580.0" prefWidth="800.0"  stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.MedicalEquipmentDeliveryServiceRequestPageServiceRequestController">   <children>
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#updateFromDB" prefHeight="580.0" prefWidth="800.0"   xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.MedicalEquipmentDeliveryServiceRequestPageServiceRequestController">   <children>
     <GridPane fx:id="gridPane" layoutX="6.0" layoutY="6.0" prefHeight="580.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
@@ -102,7 +103,7 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="title" alignment="TOP_LEFT" prefHeight="37.0" prefWidth="560.0" style="-fx-font-size: 30;" text="Medical Equipment Delivery Service Request" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" />
+            <Label fx:id="title" alignment="TOP_LEFT" prefHeight="37.0" prefWidth="560.0" text="Medical Equipment Delivery Service Request" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" />
             <AutoCompleteTextField fx:id="locationText" promptText="Enter location..." GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
