--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/SanitationServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/SanitationServiceRequestPage.fxml
@@ -15,6 +15,7 @@
 <?import edu.wpi.teame.view.controllers.AutoCompleteTextField?>
 
 <AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#updateFromDB" prefHeight="580.0" prefWidth="800.0"  stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.SanitationServiceRequestPageServiceRequestController">   <children>
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#updateFromDB" prefHeight="580.0" prefWidth="800.0"   xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.SanitationServiceRequestPageServiceRequestController">   <children>
     <GridPane fx:id="gridPane" layoutX="6.0" layoutY="6.0" prefHeight="580.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -76,7 +77,7 @@
                     <Insets left="10.0" right="10.0" />
                 </GridPane.margin>
             </JFXComboBox>
-            <Label fx:id="title" alignment="CENTER" prefHeight="45.0" prefWidth="323.0" style="-fx-font-size: 30;"  text="Sanitation Service Request" textAlignment="CENTER" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Label fx:id="title" alignment="CENTER" prefHeight="45.0" prefWidth="323.0" text="Sanitation Service Request" textAlignment="CENTER" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                 <font>
                     <Font size="32.0" />
                 </font>
